Resoluções de bugs

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ControleDeContatos
-@using ControleDeContatos.Models
+﻿@using SistemaLocacao
+@using SistemaLocacao.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
