Criação das Migrations e Adição no Banco de Dados

--- a/Views/Cliente/ApagarConfirmacao.cshtml
+++ b/Views/Cliente/ApagarConfirmacao.cshtml
@@ -6,5 +6,5 @@
 <div class="text-center">
     <h3>Realmente deseja apagar o contato(@Model.Nome)</h3>
 </div>
-<a class="btn btn-primary btn-block" role="button" asp-controller="Contato" asp-action="Index" >Cancelar exclusão</a>
-<a class="btn btn-danger btn-block" role="button" asp-controller="Contato" asp-route-id="@Model.Id" asp-action="Apagar" >Confirmar exclusão</a>
+<a class="btn btn-primary btn-block" role="button" asp-controller="Cliente" asp-action="Index" >Cancelar exclusão</a>
+<a class="btn btn-danger btn-block" role="button" asp-controller="CLiente" asp-route-id="@Model.Id" asp-action="Apagar" >Confirmar exclusão</a>
