--- a/Views/Cliente/Index.cshtml
+++ b/Views/Cliente/Index.cshtml
@@ -41,7 +41,7 @@
                 <th scope="col"></th>
             </tr>
         </thead>
-        <tbody>
+       @* <tbody>
             @if (Model != null && Model.Any()) //Se a minha model távindo diferente de nulo e contando alguma informação contendo alguma informação dentro dela
             {
                 foreach (ClienteModel cliente in Model)
@@ -64,7 +64,7 @@
             {
                <tr class="add"><td valign="top" colspan="5">Nenhum contato encontrado</td></tr>
             }
-        </tbody>
+        </tbody>*@
     </table>
 </div>
 
