--- a/Views/Cliente/Criar.cshtml
+++ b/Views/Cliente/Criar.cshtml
@@ -17,12 +17,12 @@
     </div>
     <div class="form-group">
         <label for="nome">E-mail</label>
-        <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o e-mail do cliente">
+        <input type="text" pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" asp-for="CPF" class="form-control" placeholder="Digite o CPF do cliente">
         @Html.ValidationMessageFor(x => x.CPF)
     </div>
     <div class="form-group">
         <label for="nome">Celular</label>
-        <input type="text" asp-for="DataNascimento" class="form-control" placeholder="Digite o celular do cliente">
+        <input type="date" asp-for="DataNascimento" class="form-control" placeholder="Digite a data de nascimento do cliente">
         @Html.ValidationMessageFor(x => x.DataNascimento)
     </div> 
 
