Criando a locação de filmes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Filme" asp-action="Index">Filmes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="#" asp-action="#">Locação</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Locacao" asp-action="Index">Locação</a>
                         </li>
                     </ul>
                 </div>
