Alterações em locações

--- a/Views/Locacao/Index.cshtml
+++ b/Views/Locacao/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model List<ClienteModel>
+﻿@model List<LocacaoModel>
 @{
-    ViewData["Title"] = "Listagem de clientes";
+    ViewData["Title"] = "Listagem de locações";
 }
 
 <div class="text-center">
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-primary" role="button" asp-controller="Locacao" asp-action="Criar"> Adicionar novo cliente</a>
+        <a class="btn btn-primary" role="button" asp-controller="Locacao" asp-action="Criar"> Adicionar nova locação de filmes</a>
     </div>
 
     <br />
@@ -31,7 +31,7 @@
 
     <h1 class="display-4">Listagem de contatos</h1>
 
-    @*<table class="display" id="table-contatos" style="width:100%">
+    <table class="display" id="table-contatos" style="width:100%">
         <thead>
             <tr>
                 <th scope="col">#</th>
@@ -44,17 +44,16 @@
         <tbody>
             @if (Model != null && Model.Any()) //Se a minha model távindo diferente de nulo e contando alguma informação contendo alguma informação dentro dela
             {
-                foreach (ClienteModel cliente in Model)
+                foreach (LocacaoModel locacao in Model)
                 {
                     <tr>
-                        <th scope="row">@cliente.Id</th>
-                        <td>@cliente.Nome</td>
-                        <td>@cliente.CPF</td>
-                     <td>@cliente.DataNascimento</td>
+                        <th scope="row">@locacao.Id</th>
+                        <td>@locacao.Cliente</td>
+                        <td>@locacao.Filme</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a role="button" class="btn btn-primary" asp-route-id="@cliente.Id" asp-controller="Cliente" asp-action="Editar">Editar</a>
-                                <a role="button" class="btn btn-danger" asp-route-id="@cliente.Id" asp-controller="Cliente" asp-action="ApagarConfirmacao">Apagar</a>
+                                <a role="button" class="btn btn-primary" asp-route-id="@locacao.Id" asp-controller="Locacao" asp-action="Editar">Editar</a>
+                                <a role="button" class="btn btn-danger" asp-route-id="@locacao.Id" asp-controller="Locacao" asp-action="ApagarConfirmacao">Apagar</a>
                             </div>
                         </td>
                     </tr>
@@ -65,6 +64,6 @@
                 <tr class="add"><td valign="top" colspan="5">Nenhum contato encontrado</td></tr>
             }
         </tbody>
-    </table>*@
+    </table>
 </div>
 
