--- a/Views/Locacao/Criar.cshtml
+++ b/Views/Locacao/Criar.cshtml
@@ -1,6 +1,7 @@
-﻿@model ClienteModel
+﻿@model ClienteLocacaoFilme
+using System.Collections.Generic;
 @{
-    ViewData["Title"] = "Criar cliente";
+    ViewData["Title"] = "Cadastrar locação";
 }
 
 <div class="text-center">
@@ -8,23 +9,32 @@
     <h1 class="display-4">Cadastrar cliente</h1>
 
 </div>
-<form asp-controller="Cliente" asp-action="Criar" method="post">
+<form asp-controller="Locacao" asp-action="Criar" method="post">
 
     <div class="form-group">
+        <input type="hidden" asp-for="Cliente.Id" />
         <label for="nome">Nome</label>
-        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do cliente">
-        @Html.ValidationMessageFor(x => x.Nome)
+        <select asp-for="Locacao.Cliente" class="form-control" >
+            <option></option>
+        </select>
+        @Html.ValidationMessageFor(x => x.Locacao.Cliente)
     </div>
     <div class="form-group">
-        <label for="nome">E-mail</label>
-        <input type="text" pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" asp-for="CPF" class="form-control" placeholder="Digite o CPF do cliente">
-        @Html.ValidationMessageFor(x => x.CPF)
+        <label for="nome">Filme</label>
+        <select asp-for="Filme.Titulo" class="form-control" placeholder="Digite a data de nascimento do cliente">
+        </select>
+        @Html.ValidationMessageFor(x => x.Filme.Titulo)
     </div>
     <div class="form-group">
         <label for="nome">Celular</label>
-        <input type="date" asp-for="DataNascimento" class="form-control" placeholder="Digite a data de nascimento do cliente">
-        @Html.ValidationMessageFor(x => x.DataNascimento)
-    </div> 
+        <input type="date" asp-for="Locacao.DataLocacao" class="form-control" placeholder="Digite a data de nascimento do cliente">
+        @Html.ValidationMessageFor(x => x.Locacao.DataLocacao)
+    </div>
+    <div class="form-group">
+        <label for="nome">Celular</label>
+        <input type="date" asp-for="Locacao.DataDevolucao" class="form-control" placeholder="Digite a data de nascimento do cliente">
+        @Html.ValidationMessageFor(x => x.Locacao.DataDevolucao)
+    </div>
 
     <button type="submit" class="btn btn-primary btn-block">Adicionar</button>
     <a class="btn btn-secondary btn-block" asp-controller="Cliente" asp-action="Index" role="button">Voltar</a>
