--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Página Inicial";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Bem vindo</h1>
-    <p>Sistema de controle de Contatos</p>
+﻿
+<div class="text-center card-body">
+    <h1 class="display-3 card-title">Bem vindo</h1>
+    <h3 class="card-text">On-Filmes, O Melhor Sistema de Locação de Filmes</h3>
 </div>
+
+
+
