--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,33 +3,36 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Sistema de Locação de Filmes</title>
+    <title>@ViewData["Title"] On-Filmes - O melhor Sistema de Locação de Filmes</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.11.5/datatables.min.css" />
+    <link rel="icon" href="https://megaflix.co/wp-content/uploads/2020/03/favicon-megaflix.png?x13411" sizes="172x172">
 </head>
-<body>
+<body class="bg-light">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom box-shadow ">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sistema de Locação de Filmes</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img width="128" height="70" src="https://onfilmes.cf/wp-content/uploads/2022/02/cropped-oie_6201438CpshWXeN.png" class="custom-logo" alt="onfilmes HD">
+                </a>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Página Inicial</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Página Inicial</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Index">Clientes</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Cliente" asp-action="Index">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Filme" asp-action="Index">Filmes</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Filme" asp-action="Index">Filmes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Locacao" asp-action="Index">Locação</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Locacao" asp-action="Index">Locação</a>
                         </li>
                     </ul>
                 </div>
@@ -42,9 +45,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Controle de Contatos
+    <footer class="border-top footer text-muted bg-dark">
+        <div class="container text-light">
+            &copy; 2022 &nbsp; On-Filmes - O Melhor Sistema de Locação de Filmes
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
