--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,6 +12,14 @@ a {
   color: #0366d6;
 }
 
+.button-edit{
+    margin: 0px 10px 0px 100px !important;
+}
+
+.btn-success {
+    margin: 100px 0px -100px 0px !important;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -19,9 +27,9 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
@@ -63,11 +71,12 @@ body {
   margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    background-color: #0f171e !important;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 .field-validation-error {
