--- a/Views/Cliente/Criar.cshtml
+++ b/Views/Cliente/Criar.cshtml
@@ -16,16 +16,15 @@
         @Html.ValidationMessageFor(x => x.Nome)
     </div>
     <div class="form-group">
-        <label for="nome">E-mail</label>
+        <label for="nome">CPF</label>
         <input type="text" pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" asp-for="CPF" class="form-control" placeholder="Digite o CPF do cliente">
         @Html.ValidationMessageFor(x => x.CPF)
     </div>
     <div class="form-group">
-        <label for="nome">Celular</label>
+        <label for="nome">Digite a data de nascimento do cliente</label>
         <input type="date" asp-for="DataNascimento" class="form-control" placeholder="Digite a data de nascimento do cliente">
         @Html.ValidationMessageFor(x => x.DataNascimento)
     </div> 
-    <
 
     <button type="submit" class="btn btn-primary btn-block">Adicionar</button>
     <a class="btn btn-secondary btn-block" asp-controller="Cliente" asp-action="Index" role="button">Voltar</a>
