--- a/Views/Cliente/Editar.cshtml
+++ b/Views/Cliente/Editar.cshtml
@@ -16,13 +16,13 @@
         @Html.ValidationMessageFor(x => x.Nome)
     </div>
     <div class="form-group">
-        <label for="nome">E-mail</label>
-        <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o e-mail do cliente">
+        <label for="nome">Digite o CPF cliente</label>
+        <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o CPF cliente">
         @Html.ValidationMessageFor(x => x.CPF)
     </div>
     <div class="form-group">
-        <label for="nome">Celular</label>
-        <input type="text" asp-for="DataNascimento" class="form-control" placeholder="Digite o celular do cliente">
+        <label for="nome">Digite a data de nascimento do cliente</label>
+        <input type="text" asp-for="DataNascimento" class="form-control" placeholder="Digite a data de nascimento do cliente">
         @Html.ValidationMessageFor(x => x.DataNascimento)
     </div> 
     <button type="submit" class="btn btn-primary btn-block">Alterar</button>
