Atualização de estilo e de migrations

--- a/Views/Filme/ApagarConfirmacao.cshtml
+++ b/Views/Filme/ApagarConfirmacao.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FilmeModel
 @{
-    ViewData["Title"] = "Confirmação de apagar o contato";
+    ViewData["Title"] = "Confirmação de apagar o filme?";
 }
 
 <div class="text-center">
