--- a/Views/Locacao/Criar.cshtml
+++ b/Views/Locacao/Criar.cshtml
@@ -5,7 +5,7 @@
 
 <div class="text-center">
 
-    <h1 class="display-4">Cadastrar locação de filmes</h1>
+    <h1 class="display-4">Cadastrar locação</h1>
 
 </div>
 <form asp-controller="Locacao" asp-action="Criar" method="post">
