--- a/Views/Cliente/Editar.cshtml
+++ b/Views/Cliente/Editar.cshtml
@@ -11,17 +11,17 @@
 <form asp-controller="Cliente" asp-action="Alterar" method="post">
     <input type="hidden" asp-for="Id"/>
     <div class="form-group">
-        <label for="nome">Nome</label>
+        <label for="nome">Nome:</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do cliente">
         @Html.ValidationMessageFor(x => x.Nome)
     </div>
     <div class="form-group">
-        <label for="nome">Digite o CPF cliente</label>
+        <label for="nome">CPF:</label>
         <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o CPF cliente">
         @Html.ValidationMessageFor(x => x.CPF)
     </div>
     <div class="form-group">
-        <label for="nome">Digite a data de nascimento do cliente</label>
+        <label for="nome">Data de nascimento:</label>
         <input type="text" asp-for="DataNascimento" class="form-control" placeholder="Digite a data de nascimento do cliente">
         @Html.ValidationMessageFor(x => x.DataNascimento)
     </div> 
